[project]
name = "my-python-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.7",
    "fastapi>=0.115.5",
    "polars>=1.14.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "typer>=0.13.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = ['my_project*']

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[tool.ruff]
line-length = 88


[tool.ruff.lint]
ignore = ["B028", "B904", "W291"]
select = ["A", "B", "E", "F", "W", "I", "UP", "SIM"]
